--- a/ChairShopping/appsettings.json
+++ b/ChairShopping/appsettings.json
@@ -1,9 +1,13 @@
 {
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MyConn": "Server=MAHMOUD; Database=ChairShopping; Trusted_Connection=True; MultipleActiveResultSets=true;TrustServerCertificate=True"
+  }
 }
