Update connection string

--- a/ChairShopping/appsettings.json
+++ b/ChairShopping/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MyConn": "Server=MAHMOUD; Database=ChairShopping; Trusted_Connection=True; MultipleActiveResultSets=true;TrustServerCertificate=True"
+    "MyConn": "Server=.; Database=ChairShopping; Trusted_Connection=True; MultipleActiveResultSets=true;TrustServerCertificate=True"
   }
 }
