--- a/ChairShopping/ChairShopping.csproj
+++ b/ChairShopping/ChairShopping.csproj
@@ -17,5 +17,9 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.9" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\asset\images\UserImages\" />
+  </ItemGroup>
+
 
 </Project>
