Send email,UpdateOrder,Favourite

--- a/ChairShopping/appsettings.json
+++ b/ChairShopping/appsettings.json
@@ -9,5 +9,13 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "MyConn": "Server=.; Database=ChairShopping; Trusted_Connection=True; MultipleActiveResultSets=true;TrustServerCertificate=True"
+  },
+  "EmailSettings": {
+    "SmtpServer": "smtp.gmail.com",
+    "Port": 587,
+    "SenderEmail": "furniturewebsite74@gmail.com",
+    "SenderName": "Furniture Website",
+    "UserName": "furniturewebsite74@gmail.com",
+    "Password": "cnyhbzalkxzxclfc"
   }
 }
