--- a/ChairShopping/appsettings.json
+++ b/ChairShopping/appsettings.json
@@ -16,6 +16,8 @@
     "SenderEmail": "furniturewebsite74@gmail.com",
     "SenderName": "Furniture Website",
     "UserName": "furniturewebsite74@gmail.com",
-    "Password": "cnyhbzalkxzxclfc"
+    "Password": "cnyhbzalkxzxclfc",
+    "UseSSL": false,
+    "UseStartTls": true
   }
 }
