send email and solve bugs

--- a/ChairShopping/appsettings.json
+++ b/ChairShopping/appsettings.json
@@ -8,16 +8,14 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MyConn": "Server=.; Database=ChairShopping; Trusted_Connection=True; MultipleActiveResultSets=true;TrustServerCertificate=True"
+    "MyConn": "Server=.; Database=ChairShopping; Trusted_Connection=True; MultipleActiveResultSets=true;TrustServerCertificate=True;MultipleActiveResultSets=true"
   },
   "EmailSettings": {
     "SmtpServer": "smtp.gmail.com",
     "Port": 587,
-    "SenderEmail": "furniturewebsite74@gmail.com",
+    "SenderEmail": "test.test3112000@gmail.com",
     "SenderName": "Furniture Website",
-    "UserName": "furniturewebsite74@gmail.com",
-    "Password": "cnyhbzalkxzxclfc",
-    "UseSSL": false,
-    "UseStartTls": true
+    "UserName": "test.test3112000@gmail.com",
+    "Password": "imfbyjuiprqujtjr"
   }
 }
